# Meeting_Scheduler

./: .gitignore  CMakeLists.txt  README.md
src/Client/: Client.cpp  Client.h  Client_main.cpp
src/Database/: DatabaseInitializer  DatabaseInitializer.cpp  DatabaseManager.cpp  DatabaseManager.h
src/Server/: MessageHandler.cpp  MessageHandler.h  Server.cpp  Server.h  Server_main.cpp  ThreadPool.cpp  ThreadPool.h
